# copilot-practice-with-issues

./: .gitignore  README.md
backend/: .env.example  Dockerfile  docker-compose.yml  pyproject.toml
backend/app/: config.py  main.py  schemas.py  security.py
frontend/: README.md  index.html
frontend/src/: App.css  App.jsx  index.css
