[project]
name = "backend"
version = "0.1.0"
description = "JWT demo API with FastAPI"
authors = [
    {name = "copilot-swe-agent[bot]",email = "198982749+Copilot@users.noreply.github.com"}
]
requires-python = ">=3.12,<4.0"
dependencies = [
    "fastapi==0.115.12",
    "uvicorn==0.34.2",
    "pyjwt==2.12.0"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
